--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 #header { /* Верхний блок */
-    background: #0080c0;
+    background: rgb(255, 255, 255);
     padding: 10px;
     height: 10%;
     background-color: rgb(255, 255, 255);
