--- a/css/controls.css
+++ b/css/controls.css
@@ -1,8 +1,8 @@
 .button {
     padding: 0.35em 1.2em;
-    border: 0.1em solid white;
+    border: 0;
     margin: 0 0.3em 0.3em 0;
-    border-radius: 0.12em;
+    border-radius: 0;
     color: #fff4e9;
     text-decoration: none;
     text-align: center;
@@ -16,6 +16,15 @@
     cursor: pointer;
     transition: 0.7s;
   }
+
+  #header_bg button{
+    font-size: 16.5px;
+    font-family: 'Oswald',sans-serif;
+    /*color: #fff4e9;*/
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.33;
+}
 
   .inv-button {
     padding: 15px 26px;
@@ -39,8 +48,10 @@
   }
 
   .soc-button {
-    padding: 30px 30px;
-    margin: 0 0.3em 0.3em 0;
+    height: 30px;
+    width: 30px;
+    padding: 0 0;
+    margin: 0 0 0 0;
     border-radius: 4px;
     color: #fff4e9;
     text-decoration: none;
