Create css for pice of footer

--- a/css/controls.css
+++ b/css/controls.css
@@ -1,3 +1,39 @@
+.link-container a{
+    text-decoration: none;
+}
+.link-container > a:hover{
+  color: #b88d61;
+}
+.footer-link-conteiner{
+  
+}
+.footer-link-conteiner a{
+  color: rgb(255, 0, 0);
+}
+.footer-link-conteiner > a:hover{
+  color: #b88d61;
+}
+.foot-marign{
+  margin-bottom: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .button {
     padding: 0.35em 1.2em;
     border: 0;
