--- a/css/index.css
+++ b/css/index.css
@@ -22,10 +22,17 @@ header > .header .link-container{
 
     header > .header .link-container{
         flex: 1;
+        display: flex;
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
     }
+    
+}
+@media (max-width: 990px){
+    header > .header .link-container{
+    display: none;
+}
 }
 
 header > .header a{
