--- a/css/img.css
+++ b/css/img.css
@@ -10,6 +10,55 @@
     width: 272px;
 }
 
+
+ p.p-can-do  {
+    color:#fff4e9;
+
+}
+
+h3.h-can-do{
+    color:#ffffff;
+}
+
+.what-can-you-do > .wcyd-container > .can-do > .work-container{
+    height: 191px;
+    width: 218px;
+    padding-right: 27px;
+    padding-left: 27px;
+    padding-top: 39px;
+    padding-bottom: 39px;
+    background: no-repeat center /auto 100% url(../img/what-you-can-do/working-table.webp);
+    margin-top: 50px;
+    text-align: center;
+    background-color: rgba(107, 30, 77, 0.56);
+    
+}
+
+.what-can-you-do > .wcyd-container > .can-do > .comunicate-container{
+    height: 164px;
+    width: 218px;
+    padding-right: 27px;
+    padding-left: 27px;
+    padding-top: 39px;
+    padding-bottom: 39px;
+    background: no-repeat center/auto 100% url(../img/what-you-can-do/business-meeting.webp);
+    margin-top: 50px;
+    text-align: center ;
+}
+
+
+.what-can-you-do > .wcyd-container > .can-do > .sd-container{
+    height: 191px;
+    width: 218px;
+    padding-right: 27px;
+    padding-left: 27px;
+    padding-top: 39px;
+    padding-bottom: 39px;
+    background: no-repeat center/100% auto url(../img/what-you-can-do/coffee-break.webp);
+    margin-top: 50px;
+    text-align: center ;
+}
+
 .what-can-you-do > .wcyd-container > .can-do {
     height: 880px;
     width: 272px;
@@ -29,6 +78,7 @@
     height: 962.4px;
     padding-top: 80px;
     padding-bottom: 90px;
+    background-color: #fff4e9;
 }
 
 
