--- a/css/controls.css
+++ b/css/controls.css
@@ -63,9 +63,11 @@
 }
 
   .inv-button {
-    padding: 15px 26px;
-    border: 0.1em solid #b88d61;
-    margin: 0 0.3em 0.3em 0;
+    height: 49.2px;
+    width: 126px;
+    border: 2px solid #b88d61;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
     border-radius: 0;
     color: #1b0914;
     text-decoration: none;
