--- a/css/controls.css
+++ b/css/controls.css
@@ -34,7 +34,7 @@
 .button {
     height: 53.6px;
     width: 112.275px;
-    border: 2px 2px 2px 2px;
+    border: 2px;
     border-color: transparent;
     padding: 0 0 0 0;
     margin: 0 0 0 0;
