--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ body {
 
 #header { /* Верхний блок */
     background: rgb(255, 255, 255);
-    height: 100;
+    height: 100px;
     background-color: rgb(255, 255, 255);
     color: #000000;
 }
@@ -80,7 +80,7 @@ header > .header-bg > #header_bg{
 }
 
 header > .header-bg{
-    align-items: "center";
+    align-items: center;
     height: 471.6px;
     padding-top: 130px;
     padding-bottom: 130px;
@@ -129,7 +129,7 @@ header > .header-bg > #header_bg > .hero-button{
 /*Concept block*/
 
 .concept > .concept-block > .concept-text > h2 {
-    height: 36,8px;
+    height: 36.8px;
     width: 272px;
     margin: 0 0 0 0;
 }
@@ -142,7 +142,7 @@ header > .header-bg > #header_bg > .hero-button{
 }
 
 .concept > .concept-block > .concept-text {
-    height: 325,8px;
+    height: 325.8px;
     width: 272px;
 }
 
@@ -153,7 +153,7 @@ header > .header-bg > #header_bg > .hero-button{
 }
 
 .concept {
-    align-items: "center";
+    align-items: center;
     height: 425px;
     padding-top: 85px;
     padding-bottom: 90px;
