--- a/css/index.css
+++ b/css/index.css
@@ -178,7 +178,22 @@ header > .header-bg > #header_bg > .hero-button{
 :root {
     scroll-behavior: smooth;
 }
+.membership{
 
+}
+#membership-button{
+    border:none;
+    text-align: center;
+    display: inline-block;
+    position: relative; 
+    height: 77px;
+    width:208px;
+}
+#membership-text-button{
+    height: 21px;
+    width:128px;
+    text-align:center;
+}
 h1{
     font-size: 32px;
     font-family: 'Oswald', sans-serif;
