--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,7 @@ h2{
     line-height: 1.1;
     font-weight: 500;
     font-style: normal;
+    margin: 0 0 0 0;
 }
 
 h3{
@@ -48,7 +49,10 @@ p{
     
 }
 
-#header { /* Верхний блок */
+
+
+/*Header top */
+#header { 
     background: rgb(255, 255, 255);
     height: 100px;
     background-color: rgb(255, 255, 255);
@@ -76,7 +80,7 @@ header > .header .link-container{
 @media (max-width: 990px){
     header > .header .link-container{
     display: none;
-}
+    }
 }
 
 header > .header a{
@@ -91,6 +95,9 @@ header > .header a{
 header > .header-bottom {
     background: no-repeat center/auto 100% url(../img/header/header.jpg);
 }
+/**/
+
+
 
 /*Header text block*/
 header > .header-bottom > .header-bg > #header_bg > .hero > .hero-inner > .hero-text{
@@ -108,7 +115,6 @@ header > .header-bottom > .header-bg > #header_bg > .hero > .hero-inner{
     margin-left: -15px;
     margin-right: -15px;
     margin-top: -50px;
-    
 }
 
 header > .header-bottom > .header-bg > #header_bg > .hero{
@@ -132,7 +138,6 @@ header > .header-bottom > .header-bg{
 header > .header-bottom {
     height: 727px;
     width: auto;
-    
 }
 
 .hero-text {
@@ -143,8 +148,7 @@ header > .header-bottom {
     line-height: inherit;
     font-style: normal;
 }
-/*Header text end*/
-
+/**/
 /*Header button block*/
 
 header > .header-bottom > .header-bg > #header_bg > .hero-button > .inbutton > .inbutton-space > .space-button{
@@ -175,8 +179,9 @@ header > .header-bottom > .header-bg > #header_bg > .hero-button{
 }
 /*Header button end*/
 
-/*Concept block*/
 
+
+/*Concept block*/
 .concept > .concept-block > .concept-text > h2 {
     height: 37px;
     width: 272px;
@@ -227,25 +232,29 @@ header > .header-bottom > .header-bg > #header_bg > .hero-button{
 
 
 
-
-
 /*!!!What Can You Do block*/
+p.p-can-do  {
+    color:#fff4e9;
+    margin-top: 20px;
+}
+
+h3.h-can-do{
+    color:#ffffff;
+    margin: 0 0 0 0;
+}
 
 .wcyd > .wcyd-container > .container .col > .enjoy-sad{
     background: no-repeat center /100% auto url(../img/what-you-can-do/coffee-break.webp);
-
 }
 
 
 .wcyd > .wcyd-container > .container .col > .communicate{
     background: no-repeat center /auto 100% url(../img/what-you-can-do/business-meeting.webp);
-
 }
 
 
 .wcyd > .wcyd-container > .container .col > .work{
     background: no-repeat center /auto 100% url(../img/what-you-can-do/working-table.webp);
-
 }
 
 .wcyd > .wcyd-container > .container .col > .card{
@@ -262,7 +271,6 @@ header > .header-bottom > .header-bg > #header_bg > .hero-button{
 }
 
 .wcyd > .wcyd-container > .container .col{
-    
     margin-top: 50px;
     padding: 0 0 0 0;
     
@@ -273,7 +281,7 @@ header > .header-bottom > .header-bg > #header_bg > .hero-button{
 }
 
 .wcyd > .wcyd-container > .container{
-    height: 753px;
+    height: 958px;
     width: 272px;
     margin-top: 45px;
     padding: 0 0 0 0;
@@ -285,7 +293,7 @@ header > .header-bottom > .header-bg > #header_bg > .hero-button{
 }
 
 .wcyd > .wcyd-container{
-    height: 880px;
+    height: 1040px;
     width: 320px;
     padding-left: 24px;
     padding-right: 24px;
@@ -293,102 +301,16 @@ header > .header-bottom > .header-bg > #header_bg > .hero-button{
 
 .wcyd {
     align-items: center;
-    height: 962px;
-    padding-top: 80px;
-    padding-bottom: 90px;
-    background-color: #fff4e9;
-}
-
-/**/
-
-
-
-
-
-
-/*What Can You Do block*/
-.what-can-you-do > .whatcyd-container > .wcyd-header > h2{
-    height: 37.4px;
-    width: 272px;
-    margin: 0 0 0 0;
-}
-
-.what-can-you-do > .whatcyd-container > .wcyd-header{
-    height: 37.4px;
-    width: 272px;
-}
-
- p.p-can-do  {
-    color:#fff4e9;
-    margin-top: 20px;
-}
-
-h3.h-can-do{
-    color:#ffffff;
-    margin: 0 0 0 0;
-}
-
-.what-can-you-do > .whatcyd-container > .can-do > .work-container{
-    height: 191px;
-    width: 218px;
-    padding-right: 27px;
-    padding-left: 27px;
-    padding-top: 39px;
-    padding-bottom: 39px;
-    background: no-repeat center /auto 100% url(../img/what-you-can-do/working-table.webp);
-    margin-top: 50px;
-    text-align: center;
-    background-color: rgba(107, 30, 77, 0.56);
-}
-
-.what-can-you-do > .whatcyd-container > .can-do > .comunicate-container{
-    height: 164px;
-    width: 218px;
-    padding-right: 27px;
-    padding-left: 27px;
-    padding-top: 39px;
-    padding-bottom: 39px;
-    background: no-repeat center/auto 100% url(../img/what-you-can-do/business-meeting.webp);
-    margin-top: 50px;
-    text-align: center ;
-}
-
-.what-can-you-do > .whatcyd-container > .can-do > .sd-container{
-    height: 191px;
-    width: 218px;
-    padding-right: 27px;
-    padding-left: 27px;
-    padding-top: 39px;
-    padding-bottom: 39px;
-    background: no-repeat center/100% auto url(../img/what-you-can-do/coffee-break.webp);
-    margin-top: 50px;
-    text-align: center ;
-}
-
-.what-can-you-do > .whatcyd-container > .can-do {
-    height: 880px;
-    width: 272px;
-    margin-top: 45px;
-}
-
-.what-can-you-do > .whatcyd-container {
-    height: 962.4px;
-    padding-left: 24px;
-    padding-right: 24px;
-}
-
-.what-can-you-do {
-    height: 962.4px;
+    height: 1210px;
     padding-top: 80px;
     padding-bottom: 90px;
     background-color: #fff4e9;
 }
 /**/
+
+
 
 /*What You Can Get for Free block*/
-
-
-
 .wygff > .col > p{
     font-size: 14px;
     font-family: 'Laila', serif;
@@ -402,17 +324,12 @@ h3.h-can-do{
     width: auto;
     height: auto;
     align-items: center;
-   
-
 }
-
 
 .wygff > .wygff-container > .container .col > .card > .damn-image{
     width: 218px;
     height: 70px;
     align-items: center;
-   
-
 }
 
 .wygff > .wygff-container > .container .col > .card > .card-body > p{
@@ -421,7 +338,6 @@ h3.h-can-do{
     padding: 0 0 0 0;
     margin: 0 0 0 0;
     text-align: center;
-    
 }
 
 .wygff > .wygff-container > .container .col > .card > .card-body {
@@ -430,7 +346,6 @@ h3.h-can-do{
     padding: 0 0 0 0;
     margin-top: 20px;
     text-align: center;
-    
 }
 
 .wygff > .wygff-container > .container .col > .card{
@@ -447,10 +362,8 @@ h3.h-can-do{
 }
 
 .wygff > .wygff-container > .container .col{
-    
     margin-top: 50px;
     padding: 0 0 0 0;
-    
 }
 .wygff > .wygff-container > .container > .row{
     width: 272px;
@@ -462,13 +375,11 @@ h3.h-can-do{
     width: 272px;
     margin-top: 45px;
     padding: 0 0 0 0;
-    
 }
 
 .wygff > .wygff-container > .wygff-header{
     height: 75px;
     width: 272px;
-    
 }
 
 .wygff > .wygff-container{
@@ -476,7 +387,6 @@ h3.h-can-do{
     width: 320px;
     padding-left: 24px;
     padding-right: 24px;
-    
 }
 
 .wygff {
@@ -489,9 +399,6 @@ h3.h-can-do{
 
 
 
-
-
-
 /*Membership block*/
 .membership > h2{
    color: #fff4e9;
@@ -499,14 +406,13 @@ h3.h-can-do{
 
 .membership > p {
     color: #fff4e9;
- }
+}
 
 .membership{
     width: 320px;
     height: 639px;
     background-image: url("/img/membership/crew.jpg ") ;
     color: #fff4e9;
-
 }
 
 .membership > .button{
