--- a/css/index.css
+++ b/css/index.css
@@ -310,6 +310,70 @@ h3.h-can-do{
 
 
 
+@media (min-width: 1280px) {
+    .wcyd > .wcyd-container > .container .col > .card > .card-body{
+        padding: 0 0 0 0;
+    }
+
+    .wcyd > .wcyd-container > .container .col > .card{
+        width: 360px;
+        height: 261px;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 60px;
+        padding-bottom: 60px;
+        border: 0px;
+        background-color: #ffffff;
+        text-align: center;
+        border-radius:0;
+    }
+    
+    .wcyd > .wcyd-container > .container .col{
+        width: 360px;
+        height: 261px;
+        margin-top: 30px;
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+    .wcyd > .wcyd-container > .container > .row{
+        width: 1170px;
+        height: 261px;
+        margin-top: -30px;
+        margin-left: -15px;
+        margin-right: -15px;
+    }
+
+    .wcyd > .wcyd-container > .container{
+        height: 261px;
+        width: 1170px;
+        padding: 0 0 0 0;
+    }
+
+    .wcyd > .wcyd-container > .wcyd-header{
+        height: 52px;
+        width: 1170px;
+        text-align: center;
+    }
+
+    .wcyd > .wcyd-container{
+        height: 358px;
+        width: 1200px;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .wcyd {
+        align-items: center;
+        height: 538px;
+        padding-top: 80px;
+        padding-bottom: 100px;
+        background-color: #fff4e9;
+    }
+}
+
+
 /*What You Can Get for Free block*/
 .wygff > .col > p{
     font-size: 14px;
